sjeng/use_undefined_identifier/c1/check_legal
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/check_legal/src/moves.c:740:8: error: use of undeclared identifier 'dword_66359C'
v43 = &dword_66359C[bking_loc]; 
       ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/check_legal/src/moves.c:894:8: error: use of undeclared identifier 'dword_66359C'
v34 = &dword_66359C[wking_loc]; 
       ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/check_legal/src/obj/moves.o] Error 1
